# short_URLs

./: .gitignore  Dockerfile  LICENSE  README.md  db.sqlite3  docker-compose.yml  index.html  manage.py  openapi.yml  pyproject.toml
.github/workflows/: cicd.yml
short_URLs/: asgi.py  settings.py  urls.py  wsgi.py
shurls/: apps.py  logic.py  models.py  tests.py  urls.py  views.py
shurls/migrations/: 0001_initial.py
